# web-site

./: cdk.json  cdk_application.py  pyproject.toml
.github/workflows/: dependabot.yml
cloudformation/: my_site_firewall_stack.py  my_site_stack.py
site/: 403.html
